kanc/src/tests/sample_code/should_fail/single_file/type_check/match_case_incorrectly_marked_impossible.k
type Nat {
    .o: Nat,
    .s(n: Nat): Nat,
}

let strict_pred = fun _(n: Nat): Nat {
    match n {
        .o => impossible,
        .s(n') => n',
    }
};
